# multi-source-sentiment-analysis

./: .gitignore  README.md  docker-compose.yml
backend/: .pre-commit-config.yaml  Dockerfile  pyproject.toml
backend/src/: automate.py  common.py  decorators.py  download.py  endpoint.py  model.py  profile.txt  reddit.py  trace_test.py  youtube.py
config/: grafana-datasources.yaml  otel-collector-config.yaml  prometheus.yml  tempo.yaml
frontend/multi-source-sentiment-analysis/: .gitignore  index.html
frontend/multi-source-sentiment-analysis/src/: App.vue
frontend/multi-source-sentiment-analysis/src/assets/: main.css
frontend/multi-source-sentiment-analysis/src/components/: Display.vue  HelloWorld.vue  Input.vue
